# archetypes

./: .gitignore  .pre-commit-config.yaml  .pymarkdown  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  archetype_macros.py  justfile  mkdocs.yml  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: mkdocs-gh-pages.yml  pr-checks.yml
docs/: 404.html  data-architecture.md  design-principles.md  index.html
docs/ADRs/: ADR-0001.md
docs/search/: search_index.json
schemas/: archetype.schema.json  common.schema.json  topic.schema.json  topic_categories.yaml
scripts/: add_frontmatter_to_topics.py  check_duplicate_topics.py  check_duplicates.py  kill_the_dead_links.py  requirements.txt  topic_validator.py  validate_categories.py  validate_titles.py
src/: index.md
src/archetypes/: core-data-engineer-archetype.md  core-engineer-archetype.md  core-software-engineer-archetype.md  fsi-software-engineer-archetype.md  fullstack-web-engineer-archetype.md
src/topics/: accounting-basics.md  advanced-data-pipeline.md  advanced-frontend-frameworks.md  advanced-javascript-and-typescript.md  advanced-microservices-patterns.md  advanced-nodejs.md  advanced-programming.md  advanced-sql.md  agile-basics.md  ai-assisted-development-tools-and-workflows.md  authentication-and-authorization.md  automated-end-to-end-system-testing.md  backend-frameworks.md  backend-testing.md  banking-basics.md  banking-regulations.md  banking-regulatory-bodies.md  basics-of-software-development-lifecycle.md  building-evolutionary-architectures.md  building-for-scale.md  (+102 more)
(+70 files in other folders)
