[project]
name = "archetypes"
version = "0.1.0"
description = "A collection of archetypes"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.6.12",
    "mkdocs-macros-plugin>=1.3.0",
    "jsonschema>=4.17.0",
    "pre-commit>=4.2.0",
    "pymarkdownlnt>=0.9.29",
]
